--- a/elderlyCare.html
+++ b/elderlyCare.html
@@ -98,12 +98,12 @@
         style="background-image: url('./assets/images/hero-banner.jpg')">
         <div class="container">
 
-          <p class="hero-subtitle">Vedic Nutrition For Elderly Care</p>
+          <p class="hero-subtitle">Elderly Vedic Care</p>
 
-          <h1 class="h1 hero-title">A dream of family without ailments is what we want you to have</h1>
+          <h1 class="h1 hero-title">We Aim for your Ailment-Free Family Dream</h1>
 
           <p class="hero-text">
-            Fat loss is not about deprivation, it's about making better choices
+            Caring about your family is a step towards being responsible
           </p>
 
           <a href="#about" class="btn btn-secondary">Details</a>
