--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -98,7 +98,7 @@
         style="background-image: url('./assets/images/hero-banner.jpg')">
         <div class="container">
 
-          <p class="hero-subtitle">Vedic Nutrition For Fat Loss</p>
+          <p class="hero-subtitle">Ultimate Vedic Fitness</p>
 
           <h1 class="h1 hero-title">Lose Fat and Rejuvenate with a Spiritual Energy.</h1>
 
