--- a/sportsNutrition.html
+++ b/sportsNutrition.html
@@ -98,7 +98,7 @@
         style="background-image: url('./assets/images/hero-banner.jpg')">
         <div class="container">
 
-          <p class="hero-subtitle">Vedic Nutrition For Sports Nutrition</p>
+          <p class="hero-subtitle">Vedic Strength 10x</p>
 
           <h1 class="h1 hero-title">Achive your Dream Sports Medal with Vedic Nutrtion</h1>
 
@@ -186,7 +186,7 @@
                 We offer 3 plans nurturing your fitness and making you able for scoring a medal:
               </p>
               <p class="section-text">  
-                <strong>Strenth & Stamina 5X(SS5X)</strong><br> For clients having lean body, a lower muscle to fat ration and  seeing strength and stamina improvement.
+                <strong>Strenth & Stamina 5x/10x (SS5X)</strong><br> For clients having lean body, a lower muscle to fat ration and  seeing strength and stamina improvement.
               </p>
               <p class="section-text">    
                 <strong>Get Me on Track (GMOT)</strong><br> For clients who want to onboard the marathon journey and want to discover the exilir of running marathons
