--- a/index.html
+++ b/index.html
@@ -311,8 +311,9 @@
               <div class="course-card">
               <a href="lifestyleRejuvanate.html">
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
-                  <img src="./assets/images/courses-1.jpg" width="350" height="300" loading="lazy"
-                    alt="Lose Fat and Rejuvenate" class="img-cover">
+                  <img src="./assets/images/courses-1.jpg" width="350" height="500" loading="lazy"
+                      style="border: 2px solid green;"
+                      alt="Lose Fat and Rejuvenate" class="img-cover">
                 </figure>
               </a>
 
@@ -356,6 +357,7 @@
                 <a href="elderlyCare.html">
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
                   <img src="./assets/images/courses-2.jpg" width="350" height="300" loading="lazy"
+                    style="border: 2px solid green;"
                     alt="Introduction to Food and Health." class="img-cover">
                 </figure>
               </a>
@@ -395,6 +397,7 @@
                 <a href="sportsNutrition.html">
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
                   <img src="./assets/images/courses-3.jpg" width="350" height="300" loading="lazy"
+                  style="border: 2px solid green;"
                     alt="Nutrition and Lifestyle in Pregnancy" class="img-cover">
                 </figure>
                 </a>
@@ -434,6 +437,7 @@
               <div class="course-card">
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
                   <img src="./assets/images/courses-4.jpg" width="350" height="300" loading="lazy"
+                  style="border: 2px solid green;"
                     alt="Expertise on Fitness, Nutrition and Health" class="img-cover">
                 </figure>
                 <div class="card-content">
@@ -519,6 +523,7 @@
 
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
                   <img src="./assets/images/courses-6.jpg" width="350" height="300" loading="lazy"
+                  style="border: 2px solid green;"
                     alt="Designing Your Personal Weight Loss Plan" class="img-cover">
                 </figure>
 
