--- a/index.html
+++ b/index.html
@@ -282,14 +282,14 @@
             </p>
 
             <p class="section-text">
-              Since this revelation, he has been reaching out to people and teaching them Ayurvedic Dincharya practices at the most affordable prices.
+              Since this revelation, he has been reaching out to people and teaching them Ayurvedic Dincharya practices at most affordable prices.
             </p>
 
 
             <h3 class="about-h3">Numerous Healings</h3>
 
             <p class="section-text">
-              He has been working to help people facing health challenges such as desk jobs, PCOD/PCOS, thyroid issues, increased body fat, diabetes, high blood pressure, and marathon training.
+              He has helped people facing health challenges in desk jobs and other ailments like PCOD/PCOS, thyroid issues, increased body fat, diabetes, high blood pressure, and marathon training.
             </p>
 
           </div>
