added shadow to card

--- a/index.html
+++ b/index.html
@@ -315,7 +315,15 @@
           </div>
 
           <ul class="grid-list">
+          <style>
+          .course-card {
+                        border: 1px solid #ccc;
+                        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16);
+                      }
+          </style>
+            
 
+            
             <li>
               <div class="course-card">
               <a href="lifestyleRejuvanate.html">
