made chose plan and pay here in bold

--- a/elderlyCare.html
+++ b/elderlyCare.html
@@ -409,14 +409,14 @@
 
 
             <hr><br>
-            <p class="section-title">Choose Plan and Pay Here:</p>
+            <p class="section-title" style="text-transform: uppercase; font-weight: bold;">Choose Plan and Pay Here:</p>
 
-            <!--Table End-->
 <!-- Dropdown code with styling -->
 <style>
   #packageDropdown {
-      width: 250px;
+      width: 200px;
       padding: 10px;
+      border: 4px solid green; /* Thick green border */
       border-radius: 8px;
       font-size: 16px;
       margin-bottom: 10px;
