--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -507,12 +507,14 @@
 
 
 <hr><br>
-<p class="section-title">Choose Plan and Pay Here:</p>
+<p class="section-title" style="text-transform: uppercase; font-weight: bold;">Choose Plan and Pay Here:</p>
+
 <!-- Dropdown code with styling -->
 <style>
   #packageDropdown {
       width: 200px;
       padding: 10px;
+      border: 4px solid green; /* Thick green border */
       border-radius: 8px;
       font-size: 16px;
       margin-bottom: 10px;
@@ -547,6 +549,7 @@
   <option value="couple">Couple Package</option>
   <option value="family">Family Package</option>
 </select>
+
 
 <!-- Display selected text, link, and image -->
 <div>
