--- a/sportsNutrition.html
+++ b/sportsNutrition.html
@@ -342,15 +342,16 @@
             </body>
             </html>
 
-            <hr><br>
-            <p class="section-title">Choose Plan and Pay Here:</p>
+            <hr>
+            <br>
+            <p class="section-title" style="text-transform: uppercase; font-weight: bold;">Choose Plan and Pay Here:</p>
 
-            <!--Table End-->
 <!-- Dropdown code with styling -->
 <style>
   #packageDropdown {
       width: 200px;
       padding: 10px;
+      border: 4px solid green; /* Thick green border */
       border-radius: 8px;
       font-size: 16px;
       margin-bottom: 10px;
@@ -376,7 +377,6 @@
       cursor: pointer;
   }
 </style>
-
 <!-- Dropdown with onchange event -->
 <select id="packageDropdown" onchange="displaySelectedText()">
   <option value="none">None</option>
