--- a/index.html
+++ b/index.html
@@ -631,20 +631,26 @@
       <div class="testimonial-cards">
           <!-- Testimonial 1 -->
           <div class="testimonial-card">
-              <img src="./assets/images/vrushali.jpg" alt="Testimonial Image 1">
-              <p class="testimonial-description"><strong>Cured from Hyperacidity and lost 4kg of Gynoid fat in 3 months</strong></p>
-          </div>
+            <img src="./assets/images/vrushali.jpg" alt="Testimonial Image 1">
+            <p class="testimonial-description">
+                <strong>Cured from Hyperacidity and lost 4kg of Gynoid fat in 3 months</strong><br>
+                <em style="font-size: smaller;">Vrushali - Bangalore - From IT Sector</em>
+            </p>
+        </div>
+        
 
           <!-- Testimonial 2 -->
           <div class="testimonial-card">
               <img src="./assets/images/harsha.jpg" alt="Testimonial Image 2">
               <p class="testimonial-description"><strong>From no running history to achieving 21k marathon medal</strong></p>
+              <em style="font-size: smaller;">Harsha - IIT Kharagpur Alumunus</em>
           </div>
 
           <!-- Testimonial 3 -->
           <div class="testimonial-card">
               <img src="./assets/images/neha.jpg" alt="Testimonial Image 3">
               <p class="testimonial-description"><strong>Cured from 6 month old PCOD in just 1 month</strong></p>
+              <em style="font-size: smaller;">Neha - from Gurgaon</em>
           </div>
       </div>
   </div>
