--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <div class="container">
 
           <div class="title-wrapper">
-            <p class="section-subtitle">Click on the Courses to know more</p>
+            <p class="section-subtitle">Our Courses </p>
 
             <h2 class="h2 section-title">Fitness & Nutrition Courses</h2>
           </div>
