elderly care to diabetes reversal

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                         </p>
                         <br>
                         <h3 class="h3">
-                            Vedic Elderly Care
+                            Diabetes / High-BP Reversal
                         </h3>
                         <em style="font-size: smaller;">Click to explore..</em>
                         <ul class="card-meta-list">
