changed confusion hyperlink

--- a/elderlyCare.html
+++ b/elderlyCare.html
@@ -175,7 +175,7 @@
             <img src="./assets/images/courses-2.jpg" width="470" height="580" loading="lazy" alt="about banner"
               class="img-cover">
 
-            <a href="upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=3000.00&cu=INR&aid=uGICAgMCyl7PtaQ" class="btn btn-secondary">Confusion?</a>
+            <a href="https://wa.me/917019297018" class="btn btn-secondary">Confusion?</a>
           </div>
 
           <div class="about-content">
