changes in self guided name

--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -195,10 +195,10 @@
                 We offer 4 plans nurturing you and your family in varied situations:
               </p>
               <p class="section-text">  
-                <strong>Basic Package</strong><br> For clients unable to join morning workout classes, this plan suits them the best, providing exercise charts and workout videos for self-guided workouts.
+                <strong>Self Guided Package</strong><br> For clients unable to join morning workout classes, this plan suits them the best, providing exercise charts and workout videos for self-guided workouts.
               </p>
               <p class="section-text">    
-                <strong>Value Package</strong><br> Basic Plan + You get to attend live morning workouts guided by experts and receive all-season diet charts.
+                <strong>Guided Package</strong><br> Basic Plan + You get to attend live morning workouts guided by experts and receive all-season diet charts.
               </p>
               <p class="section-text">
                 <strong>Couple Package</strong><br> Value Plan + Achieve fitness goals with your partner as it becomes easier when your partner joins the same journey.
@@ -271,8 +271,8 @@
                     <thead>
                         <tr>
                             <th>Description</th>
-                            <th>Basic</th>
-                            <th>Value</th>
+                            <th>Self-G</th>
+                            <th>Guided</th>
                         </tr>
                     </thead>
                     <tbody>
