25 % off on all plans

--- a/elderlyCare.html
+++ b/elderlyCare.html
@@ -196,9 +196,11 @@
               </p>
               <p class="section-text">  
                 <strong>Care my Mom/Dad (CMOD)</strong><br> If you are looking for nutrition to take care of your parent's(mom or dad) issues like Diabetes, High BP etc then this plan is for you.
+                <span style="color: red;">Offer price - INR 3000</span>
               </p>
               <p class="section-text">    
                 <strong>Care my Mom and Dad(CMAD)</strong><br> If you are looking for nutrition to take care of your parent's(mom and dad) issues like Diabetes, High BP etc then this plan is for you.
+                <span style="color: red;">Offer price - INR 5250</span>
               </p>
 
 
