--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -194,17 +194,23 @@
               <p class="section-text">
                 We offer 4 plans nurturing you and your family in varied situations:
               </p>
-              <p class="section-text">  
-                <strong>Self Guided Package</strong><br> For clients unable to join morning workout classes, this plan suits them the best, providing exercise charts and workout videos for self-guided workouts.
-              </p>
+              <p class="section-text">
+                <strong>Self Guided Package</strong>
+                For clients unable to join morning workout classes, this plan suits them the best, providing exercise charts and workout videos for self-guided workouts.
+                <span style="color: red;">Offer price - INR 2250</span>
+            </p>
+            
               <p class="section-text">    
                 <strong>Guided Package</strong><br> Basic Plan + You get to attend live morning workouts guided by experts and receive all-season diet charts.
+                <span style="color: red;">Offer price - INR 3000</span>
               </p>
               <p class="section-text">
                 <strong>Couple Package</strong><br> Value Plan + Achieve fitness goals with your partner as it becomes easier when your partner joins the same journey.
+                <span style="color: red;">Offer price - INR 4500</span>
               </p>
               <p class="section-text">
                 <strong>Family Package</strong><br> The Value Plan + Family-Focused Plan offers a comprehensive package that includes a personalized diet chart for one individual and three additional family members, along with one consultation session for each member.
+                <span style="color: red;">Offer price - INR 4500</span>
               </p>
 
 
