--- a/sportsNutrition.html
+++ b/sportsNutrition.html
@@ -196,12 +196,15 @@
               </p>
               <p class="section-text">  
                 <strong>Strenth & Stamina 5x/10x (SS5X)</strong><br> For clients having lean body, a lower muscle to fat ration and  seeing strength and stamina improvement.
+                <span style="color: red;">Offer price - INR 1500</span>
               </p>
               <p class="section-text">    
                 <strong>Get Me on Track (GMOT)</strong><br> For clients who want to onboard the marathon journey and want to discover the exilir of running marathons
+                <span style="color: red;">Offer price - INR 2250</span>
               </p>
               <p class="section-text">
                 <strong>Get Me my Dream Medal(GMDM)</strong><br> For clients who want to push themselves to outer bourdaries and seeking appropriate nutrition.<br> We at RMF have expertise in training vegeterian athletes too.
+                <span style="color: red;">Offer price - INR 2250</span>
               </p>
 
 
