New Year offer Table correction

--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -345,10 +345,15 @@
                         </tr>
                         <!-- Additional row for Price (in INR) -->
                         <tr>
-                            <td>Price (in INR)</td>
+                            <td>Original Price (in INR)</td>
                             <td>3000/-</td>
                             <td>4000/-</td>
                         </tr>
+                        <tr style="border: 2px solid orange;">
+                          <td><strong>2024 Offer Price</strong></td>
+                          <td><strong>2250/-</strong></td>
+                          <td><strong>3000/-</strong></td>
+                      </tr>
                     </tbody>
                 </table>
 
@@ -425,10 +430,15 @@
                       </tr>
                       <!-- Additional row for Price (in INR) -->
                       <tr>
-                          <td>Price (in INR)</td>
+                          <td>Original Price (in INR)</td>
                           <td>6000/-</td>
                           <td>6000/-</td>
                       </tr>
+                      <tr style="border: 2px solid orange;">
+                        <td><strong>2024 Offer Price</strong></td>
+                        <td><strong>4500/-</strong></td>
+                        <td><strong>4500/-</strong></td>
+                    </tr>
                   </tbody>
               </table>
 
