--- a/sportsNutrition.html
+++ b/sportsNutrition.html
@@ -334,11 +334,17 @@
                         </tr>
                         <!-- Additional row for Price (in INR) -->
                         <tr>
-                            <td>Price (in INR)</td>
+                            <td>Original Price (in INR)</td>
                             <td>2000/-</td>
                             <td>2000/-</td>
                             <td>3000/-</td>
                         </tr>
+                        <tr style="border: 2px solid orange;">
+                          <td><strong>2024 Offer Price</strong></td>
+                          <td><strong>1500/-</strong></td>
+                          <td><strong>1500/-</strong></td>
+                          <td><strong>2250/-</strong></td>
+                      </tr>
                     </tbody>
                 </table>
 
