--- a/elderlyCare.html
+++ b/elderlyCare.html
@@ -330,10 +330,15 @@
                         </tr>
                         <!-- Additional row for Price (in INR) -->
                         <tr>
-                            <td>Price (in INR)</td>
+                            <td>Original Price (in INR)</td>
                             <td>4000/-</td>
                             <td>7000/-</td>
                         </tr>
+                        <tr style="border: 2px solid orange;">
+                          <td><strong>2024 Offer Price</strong></td>
+                          <td><strong>3000/-</strong></td>
+                          <td><strong>5250/-</strong></td>
+                      </tr>
                     </tbody>
                 </table>
 
