name change - fat to to vedic fitness

--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -109,10 +109,10 @@
 
           <p class="hero-subtitle">Ultimate Vedic Fitness</p>
 
-          <h1 class="h1 hero-title">Lose Fat and Rejuvenate with a Spiritual Energy.</h1>
+          <h1 class="h1 hero-title">Rejuvenate with spiritual energy, achieve Vedic fitness</h1>
 
           <p class="hero-text">
-            Fat loss is not about deprivation, it's about making better choices
+            Fitness courses are not about deprivation, it's about making better choices
           </p>
 
           <a href="#about" class="btn btn-secondary">Details</a>
@@ -182,7 +182,7 @@
 
             <p class="section-subtitle">Description </p>
 
-            <h2 class="h2 section-title">Enter the Vedic fatloss journey</h2>
+            <h2 class="h2 section-title">Enter the Vedic fitness journey</h2>
 
              <style>
                 /* Add margin-bottom to create space between paragraphs */
