--- a/elderlyCare.html
+++ b/elderlyCare.html
@@ -196,11 +196,9 @@
               </p>
               <p class="section-text">  
                 <strong>Care my Mom/Dad (CMOD)</strong><br> If you are looking for nutrition to take care of your parent's(mom or dad) issues like Diabetes, High BP etc then this plan is for you.
-                <span style="color: red;">Offer price - INR 3000</span>
               </p>
               <p class="section-text">    
                 <strong>Care my Mom and Dad(CMAD)</strong><br> If you are looking for nutrition to take care of your parent's(mom and dad) issues like Diabetes, High BP etc then this plan is for you.
-                <span style="color: red;">Offer price - INR 5250</span>
               </p>
 
 
@@ -330,15 +328,10 @@
                         </tr>
                         <!-- Additional row for Price (in INR) -->
                         <tr>
-                            <td>Original Price (in INR)</td>
+                            <td>Price (in INR)</td>
                             <td>4000/-</td>
                             <td>7000/-</td>
                         </tr>
-                        <tr style="border: 2px solid orange;">
-                          <td><strong>2024 Offer Price</strong></td>
-                          <td><strong>3000/-</strong></td>
-                          <td><strong>5250/-</strong></td>
-                      </tr>
                     </tbody>
                 </table>
 
