--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                       <div class="card-content">
                           <data class="card-price" value="3000">₹3-6k</data>
                           <p class="card-author">
-                              Time: <span class="span">3-5 months</span><span style="color: red;">New Year Offer - 25% off</span>
+                              Time: <span class="span">3-5 months</span>
                           </p>
                           <br>
                           <h3 class="h3">
@@ -401,7 +401,7 @@
                     <div class="card-content">
                         <data class="card-price" value="3500">₹4-7k</data>
                         <p class="card-author">
-                            Time: <span class="span">6 months</span><span style="color: red;">New Year Offer - 25% off</span>
+                            Time: <span class="span">6 months</span>
                         </p>
                         <br>
                         <h3 class="h3">
@@ -433,7 +433,7 @@
                   <div class="card-content">
                       <data class="card-price" value="2000">₹3-4k</data>
                       <p class="card-author">
-                          Time: <span class="span">2-3 months</span><span style="color: red;">New Year Offer - 25% off</span>
+                          Time: <span class="span">2-3 months</span>
                       </p>
                       <br>
                       <h3 class="h3">
