--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -109,10 +109,10 @@
 
           <p class="hero-subtitle">Ultimate Vedic Fitness</p>
 
-          <h1 class="h1 hero-title">Rejuvenate with spiritual energy, achieve Vedic fitness</h1>
+          <h1 class="h1 hero-title">Lose Fat and Rejuvenate with a Spiritual Energy.</h1>
 
           <p class="hero-text">
-            Fitness courses are not about deprivation, it's about making better choices
+            Fat loss is not about deprivation, it's about making better choices
           </p>
 
           <a href="#about" class="btn btn-secondary">Details</a>
@@ -182,7 +182,7 @@
 
             <p class="section-subtitle">Description </p>
 
-            <h2 class="h2 section-title">Enter the Vedic fitness journey</h2>
+            <h2 class="h2 section-title">Enter the Vedic fatloss journey</h2>
 
              <style>
                 /* Add margin-bottom to create space between paragraphs */
@@ -194,23 +194,17 @@
               <p class="section-text">
                 We offer 4 plans nurturing you and your family in varied situations:
               </p>
-              <p class="section-text">
-                <strong>Self Guided Package</strong>
-                For clients unable to join morning workout classes, this plan suits them the best, providing exercise charts and workout videos for self-guided workouts.
-                <span style="color: red;">Offer price - INR 2250</span>
-            </p>
-            
+              <p class="section-text">  
+                <strong>Self Guided Package</strong><br> For clients unable to join morning workout classes, this plan suits them the best, providing exercise charts and workout videos for self-guided workouts.
+              </p>
               <p class="section-text">    
                 <strong>Guided Package</strong><br> Basic Plan + You get to attend live morning workouts guided by experts and receive all-season diet charts.
-                <span style="color: red;">Offer price - INR 3000</span>
               </p>
               <p class="section-text">
                 <strong>Couple Package</strong><br> Value Plan + Achieve fitness goals with your partner as it becomes easier when your partner joins the same journey.
-                <span style="color: red;">Offer price - INR 4500</span>
               </p>
               <p class="section-text">
                 <strong>Family Package</strong><br> The Value Plan + Family-Focused Plan offers a comprehensive package that includes a personalized diet chart for one individual and three additional family members, along with one consultation session for each member.
-                <span style="color: red;">Offer price - INR 4500</span>
               </p>
 
 
@@ -345,15 +339,10 @@
                         </tr>
                         <!-- Additional row for Price (in INR) -->
                         <tr>
-                            <td>Original Price (in INR)</td>
+                            <td>Price (in INR)</td>
                             <td>3000/-</td>
                             <td>4000/-</td>
                         </tr>
-                        <tr style="border: 2px solid orange;">
-                          <td><strong>2024 Offer Price</strong></td>
-                          <td><strong>2250/-</strong></td>
-                          <td><strong>3000/-</strong></td>
-                      </tr>
                     </tbody>
                 </table>
 
@@ -430,15 +419,10 @@
                       </tr>
                       <!-- Additional row for Price (in INR) -->
                       <tr>
-                          <td>Original Price (in INR)</td>
+                          <td>Price (in INR)</td>
                           <td>6000/-</td>
                           <td>6000/-</td>
                       </tr>
-                      <tr style="border: 2px solid orange;">
-                        <td><strong>2024 Offer Price</strong></td>
-                        <td><strong>4500/-</strong></td>
-                        <td><strong>4500/-</strong></td>
-                    </tr>
                   </tbody>
               </table>
 
